[package]
name = "mock-okx-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.11"
base64 = "0.21.0"
dotenv = "0.15.0"
hmac = "0.12.1"
serde = "1.0.155"
serde_json = "1.0.94"
sha2 = "0.10.6"
tokio = { version = "1.26.0", features = ["full"] }
