[package]
name = "mock-okx-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.11"
base64 = "0.21.0"
dotenv = "0.15.0"
hmac = "0.12.1"
rust_decimal = "1.29.0"
rust_decimal_macros = "1.29.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10.6"
tokio = { version = "1.26.0", features = ["full"] }
